--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "muse",
+  "name": "Muse",
   "version": "0.0.1",
   "description": "chrome packaged app media player",
   "main": "index.js",
