--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1",
   "app": {
     "background": {
-      "scripts": ["/js/background.js"]
+      "scripts": ["/js/runtime.js"]
     }
   },
   "icons": {
@@ -16,6 +16,10 @@
   "permissions": [
       "<all_urls>",
       "notifications",
-      { "mediaGalleries": ["read", "allAutoDetected"] }
+      { 
+        "mediaGalleries": ["read", "allAutoDetected"]
+      },
+      "storage",
+      "background"
   ]
 }
