--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tushar Kant",
   "license": "MIT",
   "dependencies": {
-    "nib": "^1.0.2"
+    "nib": "^1.0.2",
+    "underscore": "^1.6.0"
   }
 }
