--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
       "<all_urls>",
       "notifications",
       { 
-        "mediaGalleries": ["read", "allAutoDetected"]
+        "mediaGalleries": ["read", "delete", "copyTo" , "allAutoDetected"]
       },
       "storage"
   ]
